Update dog references to female dog Tarinka

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Můj pes – fotogalerie</title>
-  <meta name="description" content="Jednoduchý responzivní web o mém psovi s fotogalerií.">
+  <meta name="description" content="Jednoduchý responzivní web o fence Tarince s fotogalerií.">
 
   <!-- Font Awesome (ikony) -->
   <link rel="preconnect" href="https://cdnjs.cloudflare.com">
@@ -27,7 +27,7 @@
       </button>
 
       <ul class="nav-menu" id="navMenu">
-        <li><a href="#o-psovi">O psovi</a></li>
+        <li><a href="#o-psovi">O fence</a></li>
         <li><a href="#galerie">Galerie</a></li>
         <li><a href="#pece">Péče</a></li>
         <li><a href="#kontakt">Kontakt</a></li>
@@ -40,7 +40,7 @@
     <section class="hero" aria-label="Úvod">
       <div class="container hero-grid">
         <div class="hero-text">
-          <h1>Vítej na webu o psovi Iggy 🐶</h1>
+          <h1>Vítej na webu o fence Tarince 🐶</h1>
           <p>
             Tohle je jednoduchý responzivní web se sekcemi a fotogalerií.
             Další fotky je možné uložit do adresáře<strong>img</strong>.
@@ -58,7 +58,7 @@
         </div>
 
         <div class="hero-media">
-          <img src="img/hero.jpeg" alt="Fotka psa v kavárně" width="900" height="700" loading="eager">
+          <img src="img/hero.jpeg" alt="Fotka fenky v kavárně" width="900" height="700" loading="eager">
         </div>
       </div>
     </section>
@@ -72,24 +72,24 @@
           <article class="card">
             <h3><i class="fa-solid fa-dog" aria-hidden="true"></i> Základní info</h3>
             <ul class="list">
-              <li><strong>Jméno: </strong>Iggy</li>
+              <li><strong>Jméno: </strong>Tarinka</li>
               <li><strong>Plemeno: </strong>Golden Retriver</li>
-              <li><strong>Věk:</strong>13 let</li>
-              <li><strong>Oblíbené:</strong> mazlení, drbání, hlazení</li>
+              <li><strong>Věk:</strong>7 let</li>
+              <li><strong>Oblíbené:</strong> mazlení, drbání, hlazení a hlavně PAPÁNÍ</li>
             </ul>
           </article>
 
           <article class="card">
             <h3><i class="fa-solid fa-heart" aria-hidden="true"></i> Povaha</h3>
             <p>
-              Iggy je tuleň převtělený za psa. Rád se mazlí a nedokáže být sám.
+              Tarinka je hodná fenka, která však ráda papá. Ráda se mazlí a nedokáže být sama.
             </p>
           </article>
 
           <article class="card">
             <h3><i class="fa-solid fa-map-location-dot" aria-hidden="true"></i> Oblíbená místa</h3>
             <p>
-              Iggy má rád park i les, ale ještě raději má kavárny. Je kavárenský povaleč milující drbání a hlazení a v kavárně vždy nalezne oběť, která mu neodolá a hladí...
+              Tarinka má ráda park i les, ale ještě raději má kavárny. Moc ráda tam loudí pamlsky a miluje drbání a hlazení a v kavárně vždy nalezne oběť, která ji neodolá a hladí...
             </p>
           </article>
         </div>
@@ -137,7 +137,7 @@
         <div class="two-col">
           <div>
             <h3><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Krmení</h3>
-            <p>Doplňte, co pes jí a jak často. Pes jí 2x denně granule, jí je ale pouze se zamíchanou konzervou, ideálně s kachním masíčkem.</p>
+            <p>Doplňte, co pes jí a jak často. Fenka jí 2x denně granule, jí je ale pouze se zamíchanou konzervou, ideálně s kachním masíčkem. Kdyby mohla, jedla by klidně i 10x denně.</p>
           </div>
           <div>
             <h3><i class="fa-solid fa-person-walking" aria-hidden="true"></i> Procházky</h3>
@@ -145,7 +145,7 @@
           </div>
           <div>
             <h3><i class="fa-solid fa-star" aria-hidden="true"></i> Triky</h3>
-            <p>Co pes umí? Pes je přeborník v žebrání a citovém vydírání. Je velký mazel.</p>
+            <p>Co pes umí? Fenka je přeborník v žebrání a citovém vydírání. Je velký mazel.</p>
           </div>
         </div>
 
