Fix image file extensions from JPEG to jpeg

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="hero-media">
-          <img src="img/hero.JPEG" alt="Fotka fenky v kavárně" width="900" height="700" loading="eager">
+          <img src="img/hero.jpeg" alt="Fotka fenky v kavárně" width="900" height="700" loading="eager">
         </div>
       </div>
     </section>
@@ -106,13 +106,13 @@
 
         <div class="gallery" role="list">
           <button class="thumb" type="button" data-full="img/pes1.jpg">
-            <img src="img/pes1.JPEG" alt="Pes – foto 1" loading="lazy" width="600" height="450">
+            <img src="img/pes1.jpeg" alt="Pes – foto 1" loading="lazy" width="600" height="450">
           </button>
           <button class="thumb" type="button" data-full="img/pes2.jpg">
-            <img src="img/pes2.JPEG" alt="Pes – foto 2" loading="lazy" width="600" height="450">
+            <img src="img/pes2.jpeg" alt="Pes – foto 2" loading="lazy" width="600" height="450">
           </button>
           <button class="thumb" type="button" data-full="img/pes3.jpg">
-            <img src="img/pes3.JPEG" alt="Pes – foto 3" loading="lazy" width="600" height="450">
+            <img src="img/pes3.jpeg" alt="Pes – foto 3" loading="lazy" width="600" height="450">
           </button>
         </div>
       </div>
